styles.css
body {
    margin: 0;
}

/* Navbar Flexboxes */

.flexbar {
    background-color: #333;
    display: flex;
    height: 5vw;
    -webkit-justify-content: flex-end;
    align-items: flex-end;
    -webkit-align-items: flex-end;
    /* 
    justify-content: center;
    align-items: center;
    */
}

.flexleft, .flexright{
    color: white;
    display: flex;
    flex: 1;
}

.flexright {
    justify-content: right;
    align-items: center;
}

.flexleft a, .flexright a {
    text-decoration: none;
    font-size: 4vw;
    color: white;
    align-self: center;
}

.flexright a, .flexright img {
    float: right;
    margin: 1%;
}

.flexright a {
    font-size: 3vw;
}

.flexright img {
    width: 3vw;
    height: auto;
}

/* Landing Page */

.recipelist ul{
    list-style-type: none;
    margin: 10;
    padding: 10;
    width: 300px;
}

.landingcontainer {
    margin-top: 30px;
    overflow: auto;
    background-color: #333;
    border: 5px solid #333;
}

.leftlist, .rightlist {
    width: 39%;
    height: auto;
    padding: 5%;
    list-style-type: none;
}

.leftlist li, .rightlist li{
    font-size: 3vw;
    margin-top: 2px;
    padding: 10%;
    text-align: center;
}

.leftlist li a, .rightlist li a{
    text-decoration: none;
    color: white;
}

.leftlist li a:hover, .rightlist li a:hover{
    color: #111;
}

.leftlist {
    float: left;
}

.rightlist {
    float: right;
}



/* Recipe Pages */

.recipename {
    color: black;
    text-align: center;
    font-size: 5vw;
}

.container {
    margin: 20px 20px 0 0;
    overflow: auto;
    border: 5px solid #333;
}

.recipeimage img{
    float: left;
    width: 40%;
    height: auto;
}

.ingredientslist {
    float: left;
    margin: 5%;
}


 

